mild refactoring and add ToP tiebreaker calculation